# sCO2ES

./: 404.html  README.md  index.html  materials.py  mkdocs.yml  objects.inv  packed_bed.py  pyproject.toml  requirements.txt  sco2es.py  sitemap.xml  test.py  validate.py  validation.ipynb
.github/workflows/: main.yml
docs/: index.md
docs/reference/: case-files.md  errors.md  index.md  properties.md
docs/stylesheets/: extra.css
reference/: index.html
reference/case-files/: index.html
reference/errors/: index.html
reference/properties/: index.html
sco2es/: __init__.py  errors.py  properties.py
search/: search_index.json
stylesheets/: extra.css
validation/: case.yaml  validation.ipynb
