[tool.poetry]
name = "sco2es"
version = "0.1.0"
description = "A supercritical CO2 packed bed thermal energy storage simulation tool."
authors = ["Cory Kinney <cory.kinney@ucf.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
CoolProp = "^6.6.0"
numpy = "^1.26.0"
numba = "^0.60.0"
scipy = "^1.13.0"
ruamel-yaml = "^0.18.6"

[tool.poetry.group.docs.dependencies]
mkdocs = "1.6.0"
mkdocs-material = {version = "9.5.27", extras = ["imaging"]}
mkdocstrings-python = "1.10.0"
scienceplots = "^2.1.1"
matplotlib-label-lines = "^0.7.0"
mkdocs-jupyter = "^0.24.8"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.9.1"
jupyterlab = "^4.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
